2003-02-05  Elizabeth Thomas <eathomas93@aol.com>

        * nsext.c: Fix LocalProxy function to call Ns_CloseOnExec
        after the file descriptors have been opened instead of before

2003-02-04  Jamie Rasmussen <jrasmuss@mle.ie>

        * include/nsthread.h:
        * include/ns.h:
        * nscgi/nscgi.c:
        * nscp/nscp.c:
        * nsd/adpeval.c:
        * nsd/driver.c:
        * nsd/encoding.c:
        * nsd/exec.c:
        * nsd/fastpath.c:
        * nsd/fd.c:
        * nsd/info.c:
        * nsd/init.c:
        * nsd/listen.c:
        * nsd/modload.c:
        * nsd/nsd.h:
        * nsd/nsmain.c:
        * nsd/pathname.c:
        * nsd/request.c:
        * nsd/server.c:
        * nsd/sock.c:
        * nsd/sockcallback.c:
        * nsd/tclenv.c:
        * nsd/tclfile.c:
        * nsd/tclhttp.c:
        * nsd/tclimg.c:
        * nsd/tclsock.c:
        * nsd/tclxkeylist.c:
        * nsd/urlencode.c:
        * nsd/urlopen.c:
        * nsd/getopt.c:
        * nsd/getopt.h:
        * nsd/nswin32.c:
        * nssock/nssock.c:
        * win32: Added Win32 support and build files

2003-02-04  Nathan Folkman <shmooved@aol.com>

        * nsd/tclmisc.c: (bug fix) Fixed arg checking bug in
        NsTclStrftimeObjCmd (ns_fmttime) API.

2003-02-03  Jamie Rasmussen <jrasmuss@mle.ie>

        * tcl/sendmail.tcl: (bug fix) SF bug 632265.
        * Fixed minor spelling errors in comments.

2003-02-01  Nathan Folkman <shmooved@aol.com>

        * tcl/stats.tcl: Consolidated web based stats interface into
        a single Tcl file.
        * sample-config.tcl: Added web stats configuration.

2003-01-31  Mark Page  <mpagenva@aol.com>

	* nsd/conn.c: 
	* nsd/connio.c:
	* nsd/encoding.c:
	* nsd/form.c:
	* nsd/nsconf.c:
	* nsd/nsd.h:
	* nsd/queue.c:
	* nsd/return.c:
	* nsd/tclcmds.c:
	* nsd/tclresp.c:
	* nsd/urlencode.c:
	* include/ns.h: added in I18N capabilities derived from the OACS
	I18N design.  This set of changes is just those which are